# l3-auto-implementer

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile.sandbox  README.md  hydra.db-shm  hydra.db-wal  pyproject.toml  run.py
app/: config.py  database.py  event_bus.py  main.py  models.py  observability.py  repo_profiler.py  schemas.py  workflow_registry.py
app/api/: events.py  repo_profiles.py  sessions.py  webhooks.py
app/integrations/: github_client.py  slack_bot.py
app/sandbox/: manager.py
app/workflows/: activities.py  hydra_session.py  triage.py  triage_functions.py
docs/plans/: hydra-architecture.md  hydra-demo-plan.md  wave-1.md  wave-2.md  wave-3.md  wave-4.md  wave-5.md
scripts/: poll_github.py
skills/document-changes/: SKILL.md
skills/enhance-spec/: SKILL.md
skills/tdd-implement/: SKILL.md
static/: app.js  index.html  session.html  style.css  triage.html
tests/: conftest.py  test_api_sessions.py  test_config.py  test_e2e.py  test_events_sse.py  test_github_client.py  test_models.py  test_repo_profiler.py  test_sandbox.py  test_slack_bot.py  test_triage.py  test_webhooks.py  test_workflow.py
