[project]
name = "hydra-demo"
version = "0.1.0"
description = "Hydra async coding agent demo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "docker>=7.0.0",
    "sse-starlette>=2.0.0",
    "slack-bolt>=1.18.0",
    "python-dotenv>=1.0.0",
    "mistralai>=2.4.0",
    "mistralai-workflows>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-json-report>=1.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
